# tgbot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
docs/: devops.md  retention_and_deletion.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
project_management/analysis/: brainstorming-session-2026-01-12.md
project_management/implementation-artifacts/: 1-1-set-up-initial-project-from-the-selected-starter-template.md  1-2-register-a-channel-ops-cli-with-per-channel-disclaimer.md  1-3-help-returns-usage-instructions-channel-disclaimer-threaded.md  1-4-resolve-incoming-updates-to-a-known-channel-record.md  1-5-create-minimal-persistence-for-channels-and-audit-events.md  2-1-normalize-telegram-updates-into-a-versioned-event-envelope-and-enqueue-them-durably.md  2-2-consolidate-queued-envelopes-into-immutable-raw-lake-jsonl-windows-manifest.md  2-3-process-lake-window-files-into-latest-message-state-with-edits-and-tombstones.md  2-4-implement-userbot-based-historical-backfill-and-cursoring.md  2-5-ensure-retention-policy-and-manual-deletion-posture-are-documented-and-enforced.md  3-1-detect-questions-bot-mention-reply-to-bot-and-ignore-other-messages.md  3-7-format-answers-in-telegram-markdownv2-safely.md  (+15 more)
scripts/: bulk_create_story_files.py  dev_ops_api.sh  dev_receiver.sh  dev_worker.sh  fmt_lint_test.sh
(+99 files in other folders)
